--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^7.6.13",
     "expo": "~54.0.30",
     "expo-av": "~16.0.8",
+    "expo-clipboard": "~6.0.0",
     "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-location": "~19.0.8",
